[workspace]
resolver = "2"

exclude = [
    "examples/http_api",
    "examples/rmq-consumer",
    "examples/rmq-consumer-prom"
]

members = [
    "configs",
    "configs_builder",
    "messaging",
    "rabbitmq",
    "kafka",
    "http_components",
    "health_readiness",
    "health_http_server",
    "http_server",
    "logging",
    "metrics",
    "migrator",
    "mqtt",
    "secrets_manager",
    "sql_pool",
    "traces",
    "auth"
]

[workspace.dependencies]
thiserror = { version = "1.0.61" }
serde = { version = "1.0.203" }
serde_json = { version = "1.0.117" }
tokio = { version = "1.38.0" }
async-trait = { version = "0.1.80" }
tracing = { version = "0.1.40" }
tonic = { version = "0.11" }
opentelemetry = { version = "0.23.0" }
opentelemetry_sdk = { version = "0.23.0" }
