[workspace]
resolver = "2"

exclude = [
    "examples/http_api",
    "examples/rmq-consumer",
    "examples/rmq-consumer-prom"
]

members = [
    "configs",
    "configs_builder",
    "messaging",
    "rabbitmq",
    "kafka",
    "http_components",
    "health_readiness",
    "health_http_server",
    "http_server",
    "logging",
    "metrics",
    "migrator",
    "mqtt",
    "secrets_manager",
    "sql_pool",
    "traces",
    "auth"
]

[workspace.dependencies]
thiserror = { version = "1.0.63" }
serde = { version = "1.0.204" }
serde_json = { version = "1.0.120" }
tokio = { version = "1.38.1" }
async-trait = { version = "0.1.81" }
tracing = { version = "0.1.40" }
tonic = { version = "0.12" }
opentelemetry = { version = "0.24.0" }
opentelemetry_sdk = { version = "0.24.0" }
