[package]
name = "health-http-server"
version = "0.1.0"
edition = "2021"

[features]
prometheus = ["dep:prometheus"]

[dependencies]
configs = { path = '../configs' }
http-components = { path = '../http_components', features = ["metrics", "health"]}
health-readiness = { path = '../health_readiness' }

thiserror = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
actix-web = { version = "4.6.0" }

prometheus = { version = "0.13.4", optional = true }


