[package]
name = "http-components"
version = "0.1.0"
edition = "2021"

[features]
tracing = ["dep:otel"]
metrics = ["dep:otel", "dep:opentelemetry-semantic-conventions", "dep:opentelemetry-prometheus", "dep:prometheus"]
openapi = ["dep:utoipa"]
auth = ["dep:auth"]
validator = ["dep:validator"]
health = ["dep:health-readiness"]

[dependencies]
actix-web = { version = "4.6.0" }
actix-http = { version = "3.7.0" }
actix-cors = { version = "0.7.0" }
futures-util = { version = "0.3.30" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
async-trait = { workspace = true }

actix-service = "2.0.2"
futures = "0.3.30"

# openapi
utoipa = { version = "4.2.3", optional = true }

# validator
validator = { version = "0.18.1", features = ["derive"], optional = true }

# auth
auth = { path = "../auth", optional = true }

# metrics and tracing
otel = { path = "../otel", optional = true }

# metrics 
opentelemetry-semantic-conventions = { version = "0.15", optional = true }
opentelemetry-prometheus = { version = "0.16", optional = true }
prometheus = { version = "0.13.4", optional = true }

# health
health-readiness = { path = "../health_readiness", optional =  true }