[package]
name = "secrets-manager"
version = "0.1.0"
edition = "2021"

[features]
mocks = ["dep:mockall"]

[dependencies]
async-trait = { workspace = true }
tracing = { workspace = true }
aws-config = { version = "1.5.4" }
aws-sdk-secretsmanager = { version = "1.39.0" }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Used only with feature mock
mockall = { version = "0.12", optional = true }

[dev-dependencies]
mockall = { version = "0.12" }
tokio = { workspace = true, features = ["macros"] }
