[package]
name = "http_api"
version = "0.1.0"
edition = "2021"

[dependencies]
configs = {git = "ssh://git@github.com/tointernet/ruskit.git", rev = "v0.3.0"}
configs-builder = {git = "ssh://git@github.com/tointernet/ruskit.git", rev = "v0.3.0"}
http-components = {git = "ssh://git@github.com/tointernet/ruskit.git", rev = "v0.3.0", features = ["auth"]}
http-server = {git = "ssh://git@github.com/tointernet/ruskit.git", rev = "v0.3.0", features = ["openapi"]}
auth = {git = "ssh://git@github.com/tointernet/ruskit.git", rev = "v0.3.0"}
logging = {git = "ssh://git@github.com/tointernet/ruskit.git", rev = "v0.3.0"}
traces = {git = "ssh://git@github.com/tointernet/ruskit.git", rev = "v0.3.0"}
metrics = {git = "ssh://git@github.com/tointernet/ruskit.git", rev = "v0.3.0"}
sql-pool = {git = "ssh://git@github.com/tointernet/ruskit.git", rev = "v0.3.0", features = ["postgres"] }
migrator = {git = "ssh://git@github.com/tointernet/ruskit.git", rev = "v0.3.0", features = ["postgres"] }
health-readiness = {git = "ssh://git@github.com/tointernet/ruskit.git", rev = "v0.3.0"}

actix-web = { version = "4.5.1" }
serde = { version = "1.0.200" }
serde_json = { version = "1.0.116" }
opentelemetry = { version = "0.22" }
async-trait = { version = "0.1.77" }
tracing = { version = "0.1.40" }
tokio = { version = "1.37.0", features = ["default", "rt-multi-thread", "macros", "signal"]}
utoipa = { version = "4.2.0" }
validator = { version = "0.18.1" }